# Emap

./: .gitignore  Cargo.toml  Emap-beta.html  Emap.html  README.md  emap.db  get_libs.sh  setup.sh  setup_system.sh
html/: Emap.html
lib/: drei.js  fiber.js
projects/: 38e78e36-e26a-4963-9ca5-97b7af80ad9c.db  c18f88bc-24d2-49ae-b83f-21ee51b112aa.db  c7970ef6-4469-43f0-8922-2ca21f62c611.db
src/: main.rs
test_build/: Cargo.toml
ui/: dashboard.html  index.html  package-lock.json  package.json  projection.html  setup.html  vite.config.js
ui/src/: App.jsx  dashboard.jsx  index.css  projection.jsx  setup.jsx
ui/src/components/: Icons.jsx  ProjectionContent.jsx
ui/src/lib/: color.js  math.js  persistence.js  procedural.js
