[[bin]]
name = "emap"
[package]
name = "emap"
version = "0.1.0"
edition = "2021"

[dependencies]
display-info = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"
futures-util = "0.3"
qmetaobject = { version = "0.2.10", features = ["webengine"] }
cstr = "0.2.12"